fix gtk4 server side titlebar window controls spacing not matching csd

--- a/src/_sass/gtk/_common-4.0.scss
+++ b/src/_sass/gtk/_common-4.0.scss
@@ -1510,7 +1510,7 @@ headerbar {
   &.default-decoration {
     font-weight: bold;
     min-height: 32px;
-    padding: 0 if($titlebutton == 'circle', 4px, 3px);
+    padding: 0 if($titlebutton != 'circle', 3px, '');
 
     windowcontrols {
       menubutton button {
